--- a/style.css
+++ b/style.css
@@ -616,9 +616,11 @@ body {
 
 
 .whyme-i-am {
-    margin: 40px 0 0 100px;
+    margin: 60px 0 0 100px;
     font-size: 48px;
+    font-weight: 700;
     color: var(--accent);
+    line-height: 120%;
 }
 
 
@@ -637,7 +639,6 @@ body {
     align-items: center;
     gap: 14px;
     min-width: 170px;
-    color: rgba(255, 255, 255, 1);
     transition: color 120ms ease-in-out;
 }
 
